# immi_pulse

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  lighthouserc.cjs  manage_rss.sh  n8n_master_workflow.json  n8n_sub_workflow.json  n8n_workflow.json  n8n_workflow_template.json
backend/: Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  candidates.py  filters.py  news.py
backend/app/services/: __init__.py  candidate_service.py  filter_service.py  news_service.py
backend/migrations/: 001_initial_schema.sql  002_add_rss_sources.sql
backend/src/: config.ts  db.ts  server.ts
backend/src/auth/: cookie.ts  middleware.ts  password.ts
backend/src/notifications/: broker.ts  broker_core.ts  listener_helpers.ts  mailer.ts  templates.ts
backend/src/routes/: admin.ts  alerts.ts  auth.ts  feed.ts  user.ts
backend/src/services/: diversity.ts  feed_builder.ts
backend/src/utils/: id.ts  mock_embedding.ts  normalize_url.ts
backend/tests/: __init__.py  conftest.py  test_auth.py  test_candidates_api.py  test_filters_api.py  test_models.py  test_news_api.py  test_retention.py
backend/tests/integration/: admin_ingest_id.test.ts  admin_metrics.test.ts  admin_review.test.ts  api.int.test.ts  cookie_auth.test.ts  gdpr.test.ts  int_notif_01.test.ts  unapproved_filter.test.ts
ingestion/: Dockerfile  pyproject.toml
ingestion/src/: __init__.py  config.py  db.py  exact_dedup.py  llm.py  main.py  pipeline.py  scheduler.py  ttl_cleanup.py
ingestion/tests/: conftest.py
(+145 files in other folders)
