[project]
name = "immipulse-ingestion"
version = "1.0.0"
description = "ImmiPulse ingestion service: scraping, normalization, embedding, deduplication, tagging"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "numpy>=1.26",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "python-dateutil>=2.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
# Per docs/Test-Strategy.md §6.1: minimum 80% coverage across all
# services. Coverage is enforced via a separate target
# (`pytest --cov=src --cov-fail-under=75`); the default `pytest` invocation
# runs without coverage for fast inner-loop test cycles.
addopts = []